# usv_drl_project

./: ACexample.py  DQN.py  MPCexample.py  README.md  requirements.txt  setup.cfg
logs/: .monitor.csv  env_0.monitor.csv  env_1.monitor.csv  env_2.monitor.csv  env_3.monitor.csv  evaluations.npz  monitor.csv
src/: torchCartPole.py  torchCartPole_CopilotVer.py
src/DPusingDRL/specific/: callback.py  customEnv.py  flowchart.py  loadandplot.py  mmgdynamics.py  train.py
src/MacroControlNode/: control_test.py
src/MacroControlNode/tool/: control_tool.py
src/RLstudy/: A2C.py  AutoBerthing.py  DQNShipControl.py  PPO.py  QLearning-1.py  data  policy.optimizer.pth  policy.pth  ppo_example.py  system_info.txt  tfCartPole.py  trained_model.pth
src/controlNode/: navigation.py
src/controlNode/tool/: navigtion_tool.py
src/mmgdynamics/src/mmgdynamics/: __init__.py  calibrated_vessels.py  dynamics.py  example.py  maneuvers.py  structs.py
src/myControlAlgorithms/: RCexample.py  SMCexample.py
src/usv_drl_project/: agent.py  config.py  main.py  otterSimul.py  seed.py  single_process_train.py  test.py  test_simul.py  test_vecenv.py  train.py
src/usv_drl_project/checkpoints/: seed_0.pt
src/usv_drl_project/envs/: usv_collision_env.py
src/usv_drl_project/logs/: train_seed_0.csv  train_seed_20.csv
src/usv_drl_project/models/: dueling_dqn.py  otter.py
src/usv_drl_project/utils/: angle.py  control.py  cpa_utils.py  encounter_classifier.py  gnc.py  gridmap_utils.py  guidance.py  hydro.py  kinematics.py  logger.py  modeling.py  replay_buffer.py  reward_utils.py  vo_utils.py
