[metadata]
name = mss
version = 1.0.0
author = Hyoeun Kang
author_email = hilucy00@pukyong.ac.kr
description = Marine Systems Simulator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[project]
install_requires =
    numpy >= 1.19,
    scipy,
    matplotlib >= 3.5.3,

[options.packages.find]
where=src